[package]
name = "stellar-mass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.55.0"
piston2d-graphics = "0.44.0"
pistoncore-glutin_window = "0.72.0"
piston2d-opengl_graphics = "0.83.0"
specs = "0.20.0"
js-sandbox = "0.1.6"
piston_window = "0.131.0"

[features]
"parallel" = []